--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FribergHomez;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
-  "AllowedHosts": "*"
-}
+    "AllowedHosts": "*",
+
+    "JwtSettings": {
+      "issuer": "FribergHomezApi",
+      "Audince": "FribergHomezClient",
+      "DurationInMinutes": 60
+    }
+  }
