--- a/appsettings.json
+++ b/appsettings.json
@@ -11,8 +11,8 @@
     "AllowedHosts": "*",
 
     "JwtSettings": {
-      "issuer": "FribergHomezApi",
-      "Audince": "FribergHomezClient",
-      "DurationInMinutes": 60
+      "Issuer": "FribergHomezApi",
+      "Audience": "FribergHomezClient",
+      "DurationInMinutes": 6000
     }
   }
